# POA

./: README.md
exos/ex01_Vector/: CMakeLists.txt  Vector.cpp  Vector.h  main.cpp
exos/ex02_VecteurMove/ex-move-sem-indcis/: vector-copy  vectormove.cpp
exos/ex02_VecteurMove/ex-move-sem-indcis/.cache/clangd/index/: vectormove.cpp.67ABA2EE44C96387.idx
exos/ex03_Enum/: CMakeLists.txt  Season.cpp  Season.h
exos/ex04_VectorGenerique/: CMakeLists.txt  main.cpp
exos/exos_revisions_te1/exo_vector/: CMakeLists.txt  Vector.cpp  Vector.h  main.cpp
exos/exos_revisions_te1/exo_vectorMove/ex-move-sem-indcis/: CMakeLists.txt  vectormove.cpp
lab01_Matrix/: CMakeLists.txt  README.md  diagram.puml  rapport.md
lab01_Matrix/src/: Matrix.cpp  Matrix.hpp  Operation.hpp  main.cpp
lab01_Matrix/src/operations/: Addition.cpp  Addition.hpp  Multiplication.cpp  Multiplication.hpp  Subtraction.cpp  Subtraction.hpp
lab01_Matrix/tests/: MatrixTest.cpp
lab02_Squadron/: CMakeLists.txt  README.md  Rapport.md  brainstorm.puml  diagram.puml
lab02_Squadron/src/: Ship.cpp  Ship.h  ShipCargo.cpp  ShipCargo.h  Squadron.cpp  Squadron.h  TIEModel.cpp  TIEModel.h  main.cpp
lab02_Squadron/src/ConcreteShips/: Dreadnought.cpp  Dreadnought.h  Shuttle.cpp  Shuttle.h  TIE.cpp  TIE.h  TIEInterceptor.cpp  TIEInterceptor.h
lab03_River/: CMakeLists.txt  Rapport.md  brainstorming.puml  diagram.puml  notes.md
lab03_River/src/: Bank.cpp  Bank.h  Boat.cpp  Boat.h  Container.cpp  Container.h  Controller.cpp  Controller.h  Person.cpp  Person.h  Result.cpp  Result.h  RiverGame.cpp  RiverGame.h  main.cpp
lab03_River/src/typeOfPerson/: Child.cpp  Child.h  Cop.cpp  Cop.h  Parent.cpp  Parent.h  Thief.cpp  Thief.h
lab03_River/src/typeOfPerson/typeOfChild/: Boy.cpp  Boy.h  Girl.cpp  Girl.h
lab04_Buffy/: .clang-format  CMakeLists.txt  README.md  brainstorm.puml  diagram.puml  rapport.md  xmake.lua
lab04_Buffy/src/: Action.cpp  Action.h  Field.cpp  Field.h  Humanoid.cpp  Humanoid.h  Renderer.cpp  Renderer.h  main.cpp
lab04_Buffy/src/humanoids/: Buffy.cpp  Buffy.h  Human.cpp  Human.h  KillerHumanoid.cpp  KillerHumanoid.h  Vampire.cpp  Vampire.h
lab04_Buffy/src/subActions/: BiteAction.cpp  BiteAction.h  ChaseAction.cpp  ChaseAction.h  KillAction.cpp  KillAction.h  MoveAction.cpp  MoveAction.h  MoveRandomAction.cpp  MoveRandomAction.h
lab04_Buffy/src/utilities/: Point.cpp  Point.h  Random.cpp  Random.h
